--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,154 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html, body {
+  min-height: 100vh;
+  background-attachment: fixed;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktops: */
+  body {
+    width: 100%;
+    max-width: 600px;
+    text-align: center;
+    margin: 0 auto;
+  }
+}
+
+
+.doggy__card-container {
+  margin: 0 20px;
+  background: #fff;
+  height: auto;
+  max-height: 100vh;
+  /* border: solid 3px #000; */
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktops: */
+  .doggy__card-container {
+    
+  }
+}
+
+.doggy__colored-wrapper {
+
+}
+
+.doggy__image-wrapper {
+  padding: 10px;
+  box-sizing: border-box;
+  
+
+}
+
+.doggy__image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  max-height: 600px;
+ 
+}
+
+.doggy__btn {
+  margin: 0 auto 20px auto;
+  border: none;
+  outline: none;
+  padding: 0 0;
+  background: #fff;
+  cursor: pointer;
+}
+
+
+.oggy__dogemojii:hover {
+  font-size: 24px;
+}
+
+.doggy__generate {
+  width: 100%;
+  color: #000;
+  font-weight: 500;
+  letter-spacing: 1px;
+  background-color: #fff;
+  margin: 0 0;
+  font-size: 14px;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+
+.doggy__generate {
+  background-color: #141414;
+  border: none;
+  color: #ffffff;
+  outline: none;
+  padding: 10px 30px;
+  position: relative;
+}
+
+.doggy__generate:before,
+.doggy__generate:after {
+  border: 0 solid transparent;
+  transition: all 0.3s;
+  content: '';
+  height: 0;
+  position: absolute;
+  width: 2px;
+}
+
+.doggy__generate:before {
+  border-top: 3px solid #141414;
+  right: 0;
+  top: -4px;
+}
+
+.doggy__generate:after {
+  border-bottom: 3px solid #141414;
+  bottom: -4px;
+  left: 0;
+}
+
+.doggy__generate:hover:before,
+.doggy__generate:hover:after {
+  width: 100%;
+}
+
+.doggy__box {
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034)
+
+}
+
+
+
+/* https://www.gradient-animator.com/ */
+
+html {
+  background: linear-gradient(270deg, #02f5c8, #ffbb00, #ff00e6);
+  background-size: 600% 600%;
+
+  -webkit-animation: gradAnimation 60s ease infinite;
+  -moz-animation: gradAnimation 60s ease infinite;
+  animation: gradAnimation 60s ease infinite;
+}
+
+@-webkit-keyframes gradAnimation {
+  0%{background-position:0% 49%}
+  50%{background-position:100% 52%}
+  100%{background-position:0% 49%}
+}
+@-moz-keyframes gradAnimation {
+  0%{background-position:0% 49%}
+  50%{background-position:100% 52%}
+  100%{background-position:0% 49%}
+}
+@keyframes gradAnimation {
+  0%{background-position:0% 49%}
+  50%{background-position:100% 52%}
+  100%{background-position:0% 49%}
+}
